<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_dashboard_rectangle"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context=".DealDetailActivity"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <TextView
        android:id="@+id/tvSignInHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_weight="0"
        android:text="@string/tv_signInHeading"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/background_light" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="4dp"
        app:cardBackgroundColor="@color/background_light"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPaddingBottom="32dp"
        app:contentPaddingTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_email_sign_in"
                android:layout_width="@dimen/sign_in_button_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/sign_in_button"
                android:drawableStart="@drawable/fui_ic_mail_white_24dp"
                android:drawableLeft="@drawable/fui_ic_mail_white_24dp"
                android:drawablePadding="@dimen/button_drawable_padding"
                android:fadingEdge="vertical"
                android:gravity="start|center_vertical"
                android:padding="@dimen/button_padding"
                android:text="@string/sign_in_button_email"
                android:textAllCaps="false"
                android:textColor="@color/background_light" />

            <Button
                android:id="@+id/btn_google_sign_in"
                android:layout_width="@dimen/sign_in_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/sign_in_button_background"
                android:drawableStart="@drawable/googe_logo"
                android:drawableLeft="@drawable/googe_logo"
                android:drawablePadding="@dimen/button_drawable_padding"
                android:gravity="start|center_vertical"
                android:padding="@dimen/button_padding"
                android:text="@string/sign_in_button_label_google"
                android:textAllCaps="false"
                android:textColor="@color/sign_button_text_color" />

            <Button
                android:id="@+id/btn_facebook_sign_in"
                android:layout_width="@dimen/sign_in_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/sign_in_button_background"
                android:drawableStart="@drawable/fui_ic_facebook_white_22dp"
                android:drawableLeft="@drawable/fui_ic_facebook_white_22dp"
                android:drawablePadding="@dimen/button_drawable_padding"
                android:fadingEdge="vertical"
                android:gravity="start|center_vertical"
                android:padding="@dimen/button_padding"
                android:requiresFadingEdge="vertical"
                android:text="@string/sign_in_button_facebook"
                android:textAllCaps="false"
                android:textColor="@color/sign_button_text_color" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>